4 files modified, 4 added, 1 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<app-click-me></app-click-me>
+<hr>
+<app-key-up1></app-key-up1>
+<hr>
+<app-key-up2></app-key-up2>
+<hr>
+<app-key-up3></app-key-up3>
+<hr>
+<app-key-up4></app-key-up4>
+<hr>
+<app-loop-back></app-loop-back>
+<hr>
+<app-sumup></app-sumup>
